# neuromorphic_intelligence

./: .gitignore  README.md  install.sh  pyproject.toml
notebooks/: control_with_memory_SDI.ipynb  differential_genetic_programming.ipynb  differential_genetic_programming_repeated.ipynb  nis_genetic_programming.ipynb  nis_gp_final_results.ipynb  noise_based_learning.ipynb  noise_based_learning_other.ipynb  noise_based_learning_sdi.ipynb  noise_based_learning_sho.ipynb  oua_ctrnn_sdi.ipynb
sandbox/: cma-es_ctrnn_sdi.ipynb  cma-es_example.ipynb  control_policy_optimization_with_memory.ipynb  control_with_memory_SDI copy.ipynb  control_with_memory_SDI.ipynb  control_with_memory_SHO.ipynb  kozax_ou.py  kozax_sdi.py  nis_genetic_programming.ipynb  nis_gp_final_results.ipynb  oua_ctrnn_sdi.ipynb  symbolic_regression.ipynb
src/neuromorphic_intelligence/: __init__.py  kozax_sdi.py  models.py  oua.py  utils.py
